# bluetooth_test

./: .gitignore  CMakeLists.txt  PROJECT_SYNC.md  README.md
docs/: gatt_placeholders.md
docs/superpowers/plans/: 2026-06-30-mod-ble-host-demo.md
docs/superpowers/specs/: 2026-06-30-mod-ble-host-demo-design.md
include/: ble_client.h  demo_cli.h  mod_ble.h  mod_ble_log.h  mod_ble_types.h  proto_codec.h  proto_session.h
src/: ble_client.c  demo_cli.c  main.c  mod_ble.c  mod_ble_log.c  proto_codec.c  proto_session.c
tests/: test_demo_cli.c  test_proto_codec.c
